Previous code had fixed width and height values for the .link-container and .page-link elements, causing issues with font size and container size on different devices. Updated the CSS to use min-width and width properties to allow for responsive behavior. Also adjusted font size and container height for smaller devices using a media query. Removed unnecessary comments and modified the text alignment for better visual presentation.

--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@ body {
 
     .link-container {
         margin: 5em 0 0;
-        /* margin: auto; */
         /* border: 2px solid salmon; */
         border-radius: 3em;
-        padding: 0 5em;
+        /* padding: 0 5em; */
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 2em;
         height: 40em;
+        /* width: 50em; */
+        min-width: 42em;
         /* background-color: rgb(168, 161, 161); */
         background-color: white;
         /* background-color: rgb(247, 247, 152); */
-        /* width: 50%; */
     }
 
         .page-link {
@@ -36,6 +36,7 @@ body {
             border-radius: 5em;
             padding: 0.8em 1.5em 1em;
             text-decoration: none;
+            text-align: center;
             /* color: rgb(233, 232, 223); */
             color: white;
             /* background-color: #039180; */
@@ -47,3 +48,17 @@ body {
             font-weight: 400;
             /* font-weight: bold; */
         }
+
+@media (max-width: 768px) {
+    /* Adjust font size and container height for smaller devices */
+    .page-link {
+        font-size: 0.8em;
+    }
+
+    .link-container {
+        min-width: 12em;
+        width: 18em;
+        height: auto;
+        padding: 1em;
+    }
+}
